recursion.logo.lessons.recursion.logo.koch.Koch.scala.error
Koch:22: error: not found: value lenght
    avance(2*lenght/3)
             ^